# observal

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: package-lock.json  package.json
apps/web/src/: middleware.ts
collector/: install.sh  pyproject.toml
collector/config/: observal.env.example
collector/observal_collector/: __init__.py  cloud_client.py  identity.py  main.py  vault.py
collector/observal_collector/adapters/: __init__.py  base.py  demo.py  extron_sis.py  mikrotik.py  novastar.py  snmp.py
collector/supabase/.temp/: linked-project.json
collector/systemd/: observal-collector.service
docs/: AUTH-SETUP.md  BETA-PILOTO.md  DEPLOY-PRODUCTION.md  DEV-SIN-PI.md  FACTORY-FLASH.md  GUIA-CLIENTE-MUSEO.md  GUIA-INTEGRADOR.md  MIGRATIONS-FIRST-TIME.md  MIKROTIK-REST-SETUP.md
docs/sql/: catch-up-after-initial-schema.sql  fix-login-now.sql
factory/: factory_lib.py  preload-identity.py  register-device.py  requirements.txt  seed-demo-metrics.py  simulate-collector.py
supabase/: config.toml
supabase/functions/_shared/: alert-engine.ts  cors.ts  credentials-crypto.ts  mail.ts  sla.ts
supabase/migrations/: 20250719000000_initial_schema.sql  20250719000001_pending_ingest_token.sql  20250719100000_config_bump_trigger.sql  20250719200000_sprint3_alerts.sql  20250719300000_device_test.sql  20250720100000_sprint7_retention_alerts.sql  20250721100000_sprint8_rbac.sql  20250722100000_sprint9_audit_sla.sql  20250723100000_sprint10_plans_webhooks.sql  20250724100000_fix_signup_triggers.sql
(+91 files in other folders)
